# cmake-exploration

./: README.md
00-variables-basic/: CMakeLists.txt
01-cache/: CMakeLists.txt
02-message/: CMakeLists.txt  open-gui.bat
03-simple-project/: CMakeLists.txt  main.c
03-simple-project/exampleLib/: CMakeLists.txt
03-simple-project/hello/: CMakeLists.txt
03-simple-project/hello/include/: hello.h
03-simple-project/hello/src/: hello.c
04-multiple-projects/: CMakeLists.txt  main1.c  main2.c
05-adding-tests/: CMakeLists.txt
05-adding-tests/cmake/: FetchCMock.cmake  FetchUnity.cmake
05-adding-tests/exampleLib/: CMakeLists.txt
05-adding-tests/exampleLib/include/: example.h
05-adding-tests/exampleLib/src/: example.c
05-adding-tests/exampleLib/tests/: CMakeLists.txt  test_example.c
05-adding-tests/src/: main.c
template/: CMakeLists.txt
